Lining up poster with Ws

--- a/socorro-film-society.org/index.html
+++ b/socorro-film-society.org/index.html
@@ -67,12 +67,17 @@
         <div class="left">
           <img src="logo.png" alt="Socorro Film Society">
           <p>Next showing:</p>
-
+        </div>
+        <div class="right">
+        </div>
+      </div>
+      <div class="columned">
+        <div class="left">
           <figure>
+            <img src="posters/metropolis.png">
             <figcaption>
               Metropolis (<a href="https://www.imdb.com/title/tt0017136/?ref_=fn_t_1">IMDB</a>)
             </figcaption>
-            <img src="posters/metropolis.png">
 
           </figure>
 
