Adding trailer to webpage

--- a/socorro-film-society.org/index.html
+++ b/socorro-film-society.org/index.html
@@ -98,6 +98,9 @@
       </div>
 
       <div>
+      <video id="video" preload="auto" poster="https://kinolorberbucket.s3.amazonaws.com/production/trailers/posters/metropolis_7.jpg" controls style="width:598px;height:450px;">
+        <source src="https://kinolorberbucket.s3.amazonaws.com/production/trailers/c3713425-cd9f-48f7-ac3c-61645c75ac52.mp4" type="video/mp4">
+      </video>
 
       <h2>About Us</h2>
 
